# Ciel2_2024-2025

./: DNS  Exo application  Modelio alarme1  Tok  routage inter vlan  routage_inter_vlan_packet_tracer.pkt
Calculatrice/: calculatrice.cpp  calculatrice.h  calculatrice.ui
CalculatriceV2/: calculatricev2.cpp  calculatricev2.h  calculatricev2.ui
CalculatriceV3/: CalculatriceV3.pro  calculatricev3.cpp  calculatricev3.h  calculatricev3.ui
CentraleDalarme/: centraledalarme.h  clavier.cpp  clavier.h  clavier.ui  code.cpp  code.h  detecteur.cpp  detecteur.h  detecteurtemporise.cpp  detecteurtemporise.h  main.cpp
CentraleDalarme_TestUnitaire/: centraledalarme.cpp  clavier.cpp
CentraleDalarme_TestUnitaire_Correction/: centraledalarme.cpp
CentraleDalarme_Tuto_IHM/: clavier.h  detecteur.ui  detecteurtemporise.cpp  detecteurtemporise.h
English bby/: SCADA
Gestion_la_poste/: emballage.cpp  emballage.h  main.cpp
LesBarres/: CMakeLists.txt  barre.cpp  barre.h  barrecarree.cpp  barrecarree.h  barreronde.cpp  barreronde.h  catalogue.cpp  catalogue.h  choixCatalogue.txt  main.cpp  menu.cpp
Maths/: exo28Page60  geogebra proba tuto
PremierExemple/: monwidget.cpp  monwidget.h  monwidget.ui
ProjetBanque/LaBanque/: CMakeLists.txt  compteBancaire.txt  compteEpargne.txt  comptebancaire.cpp  comptebancaire.h  compteepargne.cpp  compteepargne.h  main.cpp
Splitter/: splitterwidget.cpp  splitterwidget.h  splitterwidget.ui
TestCode/: code.cpp  (+1 more)
TrajectoireRobot/: CMakeLists.txt  element.cpp  element.h  main.cpp  segment.cpp  segment.h  trajectoire.cpp  trajectoire.h
(+108 files in other folders)
